--- a/PP_3_1_2_Boot_Security/pom.xml
+++ b/PP_3_1_2_Boot_Security/pom.xml
@@ -54,6 +54,10 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
